--- a/config.json
+++ b/config.json
@@ -8,6 +8,6 @@
   "cleanup": true,
   "theme": "cards",
   "css": "./custom.css",
-  "footer": "Copyright Text",
+  "footer": "Copyright SAHLI DJOUAD 2023",
   "usage-stats": false
 }
